# CHIP8

./: .gitignore  README.md
C++/: CMakeLists.txt
C++/CHIP8/: Decode.h  Interpreter.cpp  Interpreter.h  Main.cpp  Platform.h
CHIP8/: Decode.cpp  Decode.h  Interpreter.cpp  Interpreter.h  Main.cpp  Platform.cpp  Platform.h
V/: V  interpreter.v  main.v  v.mod
